--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "gatsby-starter-dimension-v2",
+  "name": "mit-site",
   "description": "Gatsby Starter - Dimension V2",
   "version": "1.0.0",
-  "author": "Hunter Chang",
+  "author": "Koji Ishimoto",
   "dependencies": {
+    "date-fns": "^2.0.1",
     "gatsby": "^2.2.9",
+    "gatsby-plugin-layout": "^1.1.5",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-postcss": "^2.1.5",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-transition-link": "^1.12.4",
     "gatsby-source-custom-api": "^2.1.2",
     "gatsby-source-google-spreadsheet": "^2.0.0",
+    "gsap": "^2.1.3",
     "node-sass": "^4.11.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-headroom": "^2.2.8",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
@@ -26,6 +31,7 @@
     "clean": "gatsby clean",
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "serve": "gatsby serve",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -35,6 +41,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  }
+    "url": "https://github.com/dowdiness/mit-site"
+  },
+  "homepage": "https://miyako-it.netlify.com"
 }
