Delete default index page and remake whole site

--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@tailwindcss/custom-forms": "^0.2.0",
     "prettier": "^1.14.2",
-    "tailwindcss": "^1.1.2"
+    "tailwindcss": "^1.1.2",
+    "tailwindcss-transitions": "^2.0.1"
   },
   "repository": {
     "type": "git",
