Add some plugins for better SEO

--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "dependencies": {
     "date-fns": "^2.0.1",
     "gatsby": "^2.2.9",
+    "gatsby-plugin-google-analytics": "^2.1.12",
     "gatsby-plugin-layout": "^1.1.5",
     "gatsby-plugin-manifest": "^2.0.24",
+    "gatsby-plugin-netlify": "^2.1.10",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-postcss": "^2.1.5",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.0.10",
+    "gatsby-plugin-react-helmet-canonical-urls": "^1.2.0",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sitemap": "^2.2.9",
     "gatsby-plugin-transition-link": "^1.12.4",
     "gatsby-source-custom-api": "^2.1.2",
     "gatsby-source-google-spreadsheet": "^2.0.0",
