--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "date-fns": "^2.0.1",
     "gatsby": "^2.2.9",
+    "gatsby-image": "^2.2.15",
     "gatsby-plugin-google-analytics": "^2.1.12",
     "gatsby-plugin-layout": "^1.1.5",
     "gatsby-plugin-manifest": "^2.0.24",
@@ -17,10 +18,13 @@
     "gatsby-plugin-react-helmet-canonical-urls": "^1.2.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sharp": "^2.2.18",
     "gatsby-plugin-sitemap": "^2.2.9",
     "gatsby-plugin-transition-link": "^1.12.4",
     "gatsby-source-custom-api": "^2.1.2",
+    "gatsby-source-filesystem": "^2.1.18",
     "gatsby-source-google-spreadsheet": "^2.0.0",
+    "gatsby-transformer-sharp": "^2.2.12",
     "gsap": "^2.1.3",
     "node-sass": "^4.11.0",
     "react": "^16.8.5",
