--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-netlify": "^2.1.10",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-postcss": "^2.1.5",
+    "gatsby-plugin-preload-fonts": "^1.0.2",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.2.0",
@@ -37,6 +38,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "preload-fonts": "gatsby-preload-fonts",
     "clean": "gatsby clean",
     "build": "gatsby build",
     "develop": "gatsby develop",
