--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "date-fns": "^2.0.1",
     "gatsby": "^2.2.9",
+    "gatsby-awesome-pagination": "^0.3.4",
     "gatsby-image": "^2.2.15",
     "gatsby-plugin-google-analytics": "^2.1.12",
     "gatsby-plugin-layout": "^1.1.5",
@@ -23,6 +24,7 @@
     "gatsby-plugin-sitemap": "^2.2.9",
     "gatsby-plugin-transition-link": "^1.12.4",
     "gatsby-source-custom-api": "^2.1.2",
+    "gatsby-source-esa": "^1.1.5",
     "gatsby-source-filesystem": "^2.1.18",
     "gatsby-source-google-spreadsheet": "^2.0.0",
     "gatsby-transformer-sharp": "^2.2.12",
