--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-headroom": "^2.2.8",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-spring": "^8.0.27"
   },
   "keywords": [
     "gatsby"
