--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "1.0.0",
   "author": "Koji Ishimoto",
   "dependencies": {
+    "axios": "^0.19.0",
     "date-fns": "^2.0.1",
+    "dompurify": "^2.0.6",
     "gatsby": "^2.2.9",
     "gatsby-awesome-pagination": "^0.3.4",
     "gatsby-image": "^2.2.15",
@@ -23,18 +25,25 @@
     "gatsby-plugin-sharp": "^2.2.18",
     "gatsby-plugin-sitemap": "^2.2.9",
     "gatsby-plugin-transition-link": "^1.12.4",
+    "gatsby-plugin-typography": "^2.3.14",
     "gatsby-source-custom-api": "^2.1.2",
     "gatsby-source-esa": "^1.1.5",
     "gatsby-source-filesystem": "^2.1.18",
     "gatsby-source-google-spreadsheet": "^2.0.0",
     "gatsby-transformer-sharp": "^2.2.12",
+    "github-markdown-css": "^3.0.1",
     "gsap": "^2.1.3",
     "node-sass": "^4.11.0",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-headroom": "^2.2.8",
     "react-helmet": "^5.2.0",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19",
+    "xss": "^1.0.6"
   },
   "keywords": [
     "gatsby"
