--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^2.2.9",
     "gatsby-awesome-pagination": "^0.3.4",
     "gatsby-image": "^2.2.15",
+    "gatsby-plugin-breadcrumb": "^6.1.0",
     "gatsby-plugin-google-analytics": "^2.1.12",
     "gatsby-plugin-layout": "^1.1.5",
     "gatsby-plugin-manifest": "^2.0.24",
@@ -34,8 +35,6 @@
     "github-markdown-css": "^3.0.1",
     "gsap": "^2.1.3",
     "node-sass": "^4.11.0",
-    "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.7.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-headroom": "^3.0.0",
@@ -56,11 +55,24 @@
     "develop": "gatsby develop",
     "serve": "gatsby serve",
     "format": "prettier --write '**/*.js'",
+    "lint": "eslint 'src/**/*.{js,jsx}' --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@tailwindcss/custom-forms": "^0.2.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "gatsby-plugin-eslint": "^2.0.5",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^1.14.2",
+    "prettier-standard": "^15.0.1",
     "tailwindcss": "^1.1.2",
     "tailwindcss-transitions": "^2.0.1"
   },
