--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
 # Project dependencies
 .cache
 node_modules
-yarn-error.log
 package-lock.json
 yarn.lock
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Build directory
 /public
 .DS_Store
+
+# enviromental variable
+.env
