--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-awesome-pagination": "^0.3.4",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-google-analytics": "^2.1.12",
+    "gatsby-plugin-graphql-codegen": "^2.0.1",
     "gatsby-plugin-layout": "^1.1.5",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-netlify": "^2.1.10",
@@ -24,6 +25,7 @@
     "gatsby-plugin-sharp": "^2.2.36",
     "gatsby-plugin-sitemap": "^2.2.19",
     "gatsby-plugin-transition-link": "^1.14.2",
+    "gatsby-plugin-typescript": "^2.1.15",
     "gatsby-plugin-typography": "^2.3.15",
     "gatsby-source-custom-api": "^2.1.2",
     "gatsby-source-esa": "^1.1.5",
@@ -39,6 +41,8 @@
     "react-helmet": "^5.2.0",
     "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.7.2",
     "typography": "^0.16.19"
   },
   "devDependencies": {
