--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-netlify": "^2.1.10",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-postcss": "^2.1.5",
+    "gatsby-plugin-preact": "^3.1.21",
     "gatsby-plugin-preload-fonts": "^1.0.15",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.13",
@@ -35,6 +36,7 @@
     "gsap": "^2.1.3",
     "insane": "^2.6.2",
     "node-sass": "^4.11.0",
+    "preact": "^10.0.5",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-headroom": "^3.0.0",
