--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-sharp": "^2.2.36",
     "gatsby-plugin-sitemap": "^2.2.19",
     "gatsby-plugin-transition-link": "^1.14.2",
+    "gatsby-plugin-twitter": "^2.2.1",
     "gatsby-plugin-typescript": "^2.1.15",
     "gatsby-plugin-typography": "^2.3.15",
     "gatsby-source-custom-api": "dowdiness/gatsby-source-custom-api.git",
