--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "version": "1.0.0",
   "author": "Koji Ishimoto",
   "dependencies": {
+    "@chakra-ui/core": "^0.7.0",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "axios": "^0.19.2",
     "date-fns": "^2.6.0",
+    "emotion-theming": "^10.0.27",
     "gatsby": "^2.2.9",
     "gatsby-awesome-pagination": "^0.3.5",
     "gatsby-image": "^2.2.30",
@@ -42,6 +46,7 @@
     "react-dom": "^16.8.5",
     "react-headroom": "^3.0.0",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.9.0",
     "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
     "ts-node": "^8.4.1",
