--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^10.0.27",
     "axios": "^0.19.2",
     "date-fns": "^2.6.0",
+    "discord.js": "^12.2.0",
     "emotion-theming": "^10.0.27",
     "gatsby": "^2.2.9",
     "gatsby-awesome-pagination": "^0.3.5",
