--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-sharp": "^2.3.2",
     "github-markdown-css": "^3.0.1",
+    "got": "^11.1.4",
     "gsap": "^2.1.3",
     "insane": "^2.6.2",
     "node-sass": "^4.11.0",
